--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 pico_add_library(pico_rdm630_pio)
 
-pico_generate_pio_header(pico_rdm630_pio ${CMAKE_CURRENT_LIST_DIR}/pico_rdm630_pio.pio)
+pico_generate_pio_header(pico_rdm630_pio
+        ${CMAKE_CURRENT_LIST_DIR}/pico_rdm630_pio.pio)
 
 target_sources(pico_rdm630_pio INTERFACE
         ${CMAKE_CURRENT_LIST_DIR}/pico_rdm630_pio.c
@@ -13,5 +14,6 @@ pico_mirrored_target_link_libraries(pico_rdm630_pio INTERFACE
         pico_stdlib
         hardware_pio
         hardware_irq
+        hardware_dma
         pico_async_context_freertos
         )
